# BLISP

./: .gitignore  ACTUAL_CANONICAL_NAMES.csv  ACTUAL_CANONICAL_NAMES.txt  ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE_BLAWKTRUST_VS_BLISP.md  AS_IS_ARCHITECTURE_REPORT.md  AUDIT_VERIFICATION_SESSION_REPORT.md  BENCHMARK_GLD_NUM.sh  BLADE_IR_STATUS.md  BLISP_3_LAYER_DISPATCH_MODEL.md  BLISP_BUILTIN_ONLY_AUDIT.md  BLISP_COMPLETE_OPERATOR_REGISTRY.csv  BLISP_DISPATCH_MAP.md  BLISP_DISPATCH_SELECTION_RULES.md  BLISP_DISPATCH_STATUS_CORRECTED.md  BLISP_DISPATCH_TRACES.md  BLISP_DOCUMENTATION_INDEX.md  BLISP_DOUBLE_FAIL_AUDIT.md  BLISP_KERNEL_REGISTRY.csv  BLISP_OPERATION_DISPATCH_TABLES.md  BLOOMBERG_CSV_SUPPORT.md  BLUEPRINT_VERIFICATION_REPORT.md  BOUNDARY_SEMANTICS.md  BUCKET_SYSTEM_EXPLAINED.md  CANONICAL_FRAMEWORK_INTEGRATED.md  CANONICAL_RENAME_CORRECTED.csv  CANONICAL_RENAME_DIFF.md  CANONICAL_RENAME_EXECUTIVE_SUMMARY.md  CANONICAL_RENAME_PLAN.md  CANONICAL_RENAME_QUICKREF.md  CANONICAL_TAXONOMY.md  CLAUDE.md  CLIPPY_CLEANUP_STATUS.md  CODE_TRUTH_IMPLEMENTATION.md  COMPARISON_OPERATORS_COMPLETE.md  COMPARISON_OPERATORS_IMPLEMENTATION.md  COMPLETE_INVESTIGATION_SUMMARY.md  CURRENT_OPERATION_TAXONOMY.md  CURRENT_STRUCTURES.md  Cargo.toml  (+162 more)
.github/: CODEOWNERS
benches/: allocation_tracker.rs  ft_moments_bench.rs  fusion_benchmarks.rs  perf_guardrails.rs  rolling_baseline.rs
ci/: test_no_kernel_dupes.sh  test_no_token_conflicts.sh
data/: README.md
docs/: IR_TRANSITION_STATUS.md  OPERATIONS_COMPARISON_V02_VS_DEV.md  contracts.md
examples/: README.md  gld_num_full.blisp  gld_num_mini.blisp
expected/: quickstart_load_csv.csv
proptest-regressions/: ir_fusion.txt
scratch/: .gitignore  cs1_Z.csv  dlog_H.csv  function_comparison.md  test_H.csv
scripts/: extract_ops_inventory.sh  pipe_fixture.sh  release_check.ps1  release_check.sh  smoke.ps1  smoke.sh
src/: ast.rs  dic.rs  (+24 more)
(+42 files in other folders)
