[package]
name = "blisp"
version = "0.1.0"
edition = "2021"

[lib]
name = "blisp"
path = "src/lib.rs"

[[bin]]
name = "blisp"
path = "src/main.rs"

[dependencies]
blawktrust = { git = "https://github.com/noosehack/blawktrust", tag = "v0.1.0-orientation-stable" }
rustyline = "12.0"
csv = "1.3"
bitvec = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "perf_guardrails"
harness = false

[[bench]]
name = "rolling_baseline"
harness = false
