[package]
name = "blisp"
version = "0.4.0"
edition = "2021"

[lib]
name = "blisp"
path = "src/lib.rs"

[[bin]]
name = "blisp"
path = "src/main.rs"

[dependencies]
# Pinned to v0.1.1-orientation-stable (daf29d3) for reproducible CI
blawktrust = { git = "https://github.com/noosehack/blawktrust", tag = "v0.1.1-orientation-stable" }
rustyline = "12.0"
csv = "1.3"
memmap2 = "0.9"
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rayon = "1.10"
ryu = "1.0"

[features]
# Feature gates for benches that test internal APIs (not part of default build/CI)
bench-fusion = []  # PR4.1/PR4.2b fusion performance tests
bench-ft = []      # Ft-measurable rolling moments tests

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[[bench]]
name = "perf_guardrails"
harness = false

[[bench]]
name = "rolling_baseline"
harness = false

# Benches temporarily excluded - they test private APIs that need refactoring
# Keep files in benches/ for history, re-enable after making exec functions public
#
# [[bench]]
# name = "fusion_benchmarks"
# harness = false
# required-features = ["bench-fusion"]
#
# [[bench]]
# name = "ft_moments_bench"
# harness = false
# required-features = ["bench-ft"]
